fix horizontal scroll

--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -9,6 +9,7 @@ body {
   color: $color__primary-gray1;
   font-family: $font-family__secondary;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 b,
